src/test/run-pass/hygiene/auxiliary/my_crate.rs
// run-pass
pub fn f() {}
