src/test/compile-fail/missing-main.rs
// xfail-stage0
// error-pattern:Main function not found
fn mian() { }